src/test/ui/borrowck/borrowck-borrow-mut-object-twice.stderr
error[E0499]: cannot borrow `*x` as mutable more than once at a time
  --> $DIR/borrowck-borrow-mut-object-twice.rs:23:5
   |
LL |     let _y = x.f1();
   |              - first mutable borrow occurs here
LL |     x.f2(); //~ ERROR cannot borrow `*x` as mutable
   |     ^ second mutable borrow occurs here
LL | }
   | - first borrow ends here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0499`.
